# blinkist-scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.cursor/plans/: resilient_batch_books_run_9a833813.plan.md
.specstory/history/: 2026-02-28_15-46Z-duplicate-entries-in-books-list.md
blinkistscraper/: __main__.py  generator.py  scraper.py
templates/: book.html
