[tool.poetry]
name = "blinkist-scraper"
version = "1.0.0"
description = "Scrape blinkist.com and generate pretty output"
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chromedriver-autoinstaller = "^0.6.2"
colorama = "^0.4.6"
EbookLib = "^0.18"
requests = "^2.31.0"
selenium = "^4.15.0"
selenium-wire = "^5.1.0"
python-dotenv = "^1.0.0"
weasyprint = {version = "^62.0", optional = true}

[tool.poetry.extras]
pdf = ["weasyprint"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
